--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,9 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.20.0",
     "next": "13.4.12",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "@supabase/supabase-js": "2.20.0"
+    "react-dom": "18.2.0"
   }
 }
