--- a/frontend/.env.local.example
+++ b/frontend/.env.local.example
@@ -4,3 +4,4 @@
 # should be safe to expose to your users.
 NEXT_PUBLIC_SUPABASE_URL=https://<project-ref>.supabase.co
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-supabase-anon-key
+NEXT_PUBLIC_GOOGLE_CLIENT_ID=YOUR_WEB_CLIENT_ID.apps.googleusercontent.com
