added profile page and categories in homepage

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,3 +3,9 @@ SUPABASE_URL=https://<project-ref>.supabase.co
 
 # API key used to authenticate with supabase REST. Use the service role key for server side requests
 SUPABASE_API_KEY=your-supabase-service-key
+
+# JWT secret used to validate Supabase access tokens (Settings -> API -> JWT secret)
+SUPABASE_JWT_SECRET=your-supabase-jwt-secret
+
+# Comma separated list of allowed frontend origins for CORS
+FRONTEND_URLS=http://localhost:3000
