--- a/frontend/.env.local.example
+++ b/frontend/.env.local.example
@@ -5,3 +5,5 @@
 NEXT_PUBLIC_SUPABASE_URL=https://<project-ref>.supabase.co
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-supabase-anon-key
 NEXT_PUBLIC_GOOGLE_CLIENT_ID=YOUR_WEB_CLIENT_ID.apps.googleusercontent.com
+NEXT_PUBLIC_SUPABASE_AVATAR_BUCKET=avatars
+NEXT_PUBLIC_API_BASE=http://localhost:8000
